NugetProjects/AndroidAppPreviewer/Nuget/AndroidAppPreviewer.PluginSDK.Package/build/native/include/AndroidAppPreviewer.PluginSDK/AndroidAppPreviewerPlugin.h

typedef struct xp_element xp_element;
typedef struct xp_animation_controller xp_animation_controller;
typedef struct xp_interaction_controller xp_interaction_controller;
typedef struct xp_angle_surface xp_angle_surface;
typedef struct xp_session xp_session;
typedef struct xp_rect {
    float x;
    float y;
    float width;
    float height;
} xp_rect;
typedef struct xp_interaction_result {
    int kind;
    int direction;
    xp_element* target;
    int item_index;
} xp_interaction_result;
typedef struct xp_command {
    int type;
    xp_rect bounds;
    xp_color color;
    float value;
    char text[512];
    char auxiliary[128];
} xp_command;
ANDROID_APP_PREVIEWER_PLUGIN_API const char* xp_last_error(void);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_update(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_render_angle_surface(
    xp_session* session,
    xp_angle_surface* surface,
    unsigned char* destination,
    int destinationStride,
    int destinationCapacity);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_log_info(const char* message);
ANDROID_APP_PREVIEWER_PLUGIN_API xp_element* xp_create_element(const char* type);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_destroy_element(xp_element* element);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_items_remove_item(xp_element* target);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_add_child(xp_element* parent, xp_element* child);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_set_attribute(
    xp_element* element,
    const char* name,
    const char* value);
ANDROID_APP_PREVIEWER_PLUGIN_API xp_element* xp_find_element(xp_element* root, const char* id);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_add_storyboard_animation(xp_element* element, int trigger,
    const char* name, const char* const* keys, const char* const* values, int count);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_attach_animations(xp_element* root, xp_animation_controller* animations);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_set_page_transition(
    xp_element* root,
    xp_animation_controller* animations,
    const char* from,
    const char* to,
    int backward,
    int visible);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_add_storyboard_track(
    xp_element* element,
    int trigger,
    int property,
    float from,
    float to,
    int durationMilliseconds,
    int easing);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_add_visual_state_track(
    xp_element* scope,
    const char* groupName,
    const char* stateName,
    const char* targetName,
    int property,
    float from,
    float to,
    int durationMilliseconds,
    int easing);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_go_to_visual_state(
    xp_element* scope,
    const char* groupName,
    const char* stateName,
    int useTransitions);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_supported_attribute_count(const char* elementType);
ANDROID_APP_PREVIEWER_PLUGIN_API const char* xp_supported_attribute_name(
    const char* elementType,
    int index);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_supported_element_count(void);
ANDROID_APP_PREVIEWER_PLUGIN_API const char* xp_supported_element_name(int index);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_layout(xp_element* root, float width, float height);
ANDROID_APP_PREVIEWER_PLUGIN_API xp_element* xp_hit_test(xp_element* root, float x, float y);
ANDROID_APP_PREVIEWER_PLUGIN_API xp_element* xp_hit_test_visual(xp_element* root, float x, float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_hit_test_cursor_kind(xp_element* root, float x, float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_element_bounds(const xp_element* element, xp_rect* bounds);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_scroll_by(xp_element* root, float x, float y, float horizontalDelta, float verticalDelta);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_scroll_begin(
    xp_element* root,
    xp_animation_controller* animations,
    float x,
    float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_scroll_drag(xp_animation_controller* animations, float verticalDelta);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_scroll_end(xp_animation_controller* animations);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_set_render_offset_x(xp_element* element, float value);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_animate_render_offset_x(
    xp_element* element,
    xp_animation_controller* animations,
    float value,
    int duration_milliseconds);
ANDROID_APP_PREVIEWER_PLUGIN_API const char* xp_element_id(const xp_element* element);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_handle_tap(
    xp_element* element,
    xp_animation_controller* animations);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_handle_pointer_down(
    xp_element* element,
    xp_animation_controller* animations);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_handle_pointer_up(
    xp_element* element,
    xp_animation_controller* animations);
ANDROID_APP_PREVIEWER_PLUGIN_API xp_animation_controller* xp_create_animation_controller(void);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_destroy_animation_controller(
    xp_animation_controller* animations);
ANDROID_APP_PREVIEWER_PLUGIN_API xp_interaction_controller* xp_create_interaction_controller(void);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_destroy_interaction_controller(
    xp_interaction_controller* controller);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_interaction_pointer_down(
    xp_interaction_controller* controller,
    xp_element* root,
    xp_animation_controller* animations,
    float x,
    float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_interaction_pointer_move(
    xp_interaction_controller* controller,
    float x,
    float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_interaction_pointer_up(
    xp_interaction_controller* controller,
    xp_element* root,
    xp_animation_controller* animations,
    float x,
    float y,
    xp_interaction_result* result);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_interaction_scroll_wheel(
    xp_interaction_controller* controller,
    xp_element* root,
    float x,
    float y,
    float horizontal_delta,
    float vertical_delta);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_interaction_update(xp_interaction_controller* controller);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_set_animation_playback_rate(
    xp_animation_controller* animations,
    float playbackRate);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_update_animations(xp_animation_controller* animations);
ANDROID_APP_PREVIEWER_PLUGIN_API xp_angle_surface* xp_create_angle_surface(
    int width,
    int height,
    const char* fontPath,
    const char* resourceRoot);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_destroy_angle_surface(xp_angle_surface* surface);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_render_angle_surface(
    xp_angle_surface* surface,
    const xp_element* root,
    unsigned char* destination,
    int destinationStride,
    int destinationCapacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_render(
    const xp_element* root,
    xp_command* destination,
    int capacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_render_angle(
    const xp_element* root,
    const char* fontPath,
    int width,
    int height,
    const char* resourceRoot,
    unsigned char* destination,
    int destinationStride,
    int destinationCapacity);