NugetProjects/AndroidAppPreviewer/Nuget/AndroidAppPreviewer.PluginSDK.WPF/NativeRuntime.cs


        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_update")]
        public static extern int xp_session_update(IntPtr session);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_render_angle_surface")]
        public static extern int xp_session_render_angle_surface(IntPtr session, IntPtr surface, [Out] byte[] pixels, int stride, int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_log_info")]
        public static extern void xp_log_info([MarshalAs(UnmanagedType.LPUTF8Str)] string message);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_create_element")]
        public static extern IntPtr xp_create_element([MarshalAs(UnmanagedType.LPUTF8Str)] string type);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_destroy_element")]
        public static extern void xp_destroy_element(IntPtr element);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_items_remove_item")]
        public static extern int xp_items_remove_item(IntPtr target);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_add_child")]
        public static extern int xp_add_child(IntPtr parent, IntPtr child);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_set_attribute")]
        public static extern int xp_set_attribute(
            IntPtr element,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string value);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xp_find_element(
            IntPtr root,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string id);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xp_add_storyboard_animation(IntPtr element, int trigger,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? name,
            [In] IntPtr[] keys, [In] IntPtr[] values, int count);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xp_attach_animations(IntPtr root, IntPtr animations);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xp_set_page_transition(
            IntPtr root,
            IntPtr animations,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string from,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string to,
            int backward,
            int visible);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_add_storyboard_track")]
        public static extern int xp_add_storyboard_track(
            IntPtr element,
            int trigger,
            int property,
            float from,
            float to,
            int durationMilliseconds,
            int easing);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xp_add_visual_state_track(
            IntPtr scope,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string groupName,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string stateName,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string targetName,
            int property, float from, float to, int durationMilliseconds, int easing);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xp_go_to_visual_state(
            IntPtr scope,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string groupName,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string stateName,
            int useTransitions);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_supported_attribute_count")]
        public static extern int xp_supported_attribute_count(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string elementType);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_supported_attribute_name")]
        private static extern IntPtr xp_supported_attribute_name(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string elementType,
            int index);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_supported_element_count")]
        public static extern int xp_supported_element_count();

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_supported_element_name")]
        private static extern IntPtr xp_supported_element_name(int index);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_layout")]
        public static extern int xp_layout(IntPtr root, float width, float height);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_hit_test")]
        public static extern IntPtr xp_hit_test(IntPtr root, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_hit_test_visual")]
        public static extern IntPtr xp_hit_test_visual(IntPtr root, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_hit_test_cursor_kind")]
        public static extern int xp_hit_test_cursor_kind(IntPtr root, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_element_bounds")]
        public static extern int xp_element_bounds(IntPtr element, out NativeRect bounds);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_scroll_by")]
        public static extern int xp_scroll_by(IntPtr root, float x, float y, float horizontalDelta, float verticalDelta);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_scroll_begin")]
        public static extern int xp_scroll_begin(IntPtr root, IntPtr animations, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_scroll_drag")]
        public static extern int xp_scroll_drag(IntPtr animations, float verticalDelta);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_scroll_end")]
        public static extern void xp_scroll_end(IntPtr animations);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_set_render_offset_x")]
        public static extern int xp_set_render_offset_x(IntPtr element, float value);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_animate_render_offset_x")]
        public static extern int xp_animate_render_offset_x(
            IntPtr element,
            IntPtr animations,
            float value,
            int durationMilliseconds);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_element_id")]
        private static extern IntPtr xp_element_id(IntPtr element);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_handle_tap")]
        public static extern int xp_handle_tap(IntPtr element, IntPtr animations);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_handle_pointer_down")]
        public static extern int xp_handle_pointer_down(IntPtr element, IntPtr animations);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_handle_pointer_up")]
        public static extern int xp_handle_pointer_up(IntPtr element, IntPtr animations);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_create_animation_controller")]
        public static extern IntPtr xp_create_animation_controller();

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_destroy_animation_controller")]
        public static extern void xp_destroy_animation_controller(IntPtr animations);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_create_interaction_controller")]
        public static extern IntPtr xp_create_interaction_controller();

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_destroy_interaction_controller")]
        public static extern void xp_destroy_interaction_controller(IntPtr controller);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_interaction_pointer_down")]
        public static extern int xp_interaction_pointer_down(
            IntPtr controller, IntPtr root, IntPtr animations, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_interaction_pointer_move")]
        public static extern int xp_interaction_pointer_move(IntPtr controller, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_interaction_pointer_up")]
        public static extern int xp_interaction_pointer_up(
            IntPtr controller, IntPtr root, IntPtr animations, float x, float y, out NativeInteractionResult result);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_interaction_scroll_wheel")]
        public static extern int xp_interaction_scroll_wheel(
            IntPtr controller, IntPtr root, float x, float y, float horizontalDelta, float verticalDelta);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_interaction_update")]
        public static extern int xp_interaction_update(IntPtr controller);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_set_animation_playback_rate")]
        public static extern int xp_set_animation_playback_rate(IntPtr animations, float playbackRate);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_update_animations")]
        public static extern int xp_update_animations(IntPtr animations);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_create_angle_surface")]
        public static extern IntPtr xp_create_angle_surface(
            int width,
            int height,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string fontPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string resourceRoot);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_destroy_angle_surface")]
        public static extern void xp_destroy_angle_surface(IntPtr surface);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_render_angle_surface")]
        public static extern int xp_render_angle_surface(
            IntPtr surface,
            IntPtr root,
            [Out] byte[] pixels,
            int stride,
            int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_render")]
        public static extern int xp_render(IntPtr root, [Out] NativeCommand[]? commands, int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_render_angle")]
        public static extern int xp_render_angle(
            IntPtr root,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string fontPath,
            int width,
            int height,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string resourceRoot,
            [Out] byte[] pixels,
            int stride,
            int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_last_error")]
        private static extern IntPtr xp_last_error();
